--- a/package.json
+++ b/package.json
@@ -28,12 +28,20 @@
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "bootstrap": "^3.3.5",
+    "css-loader": "^0.19.0",
     "eslint-plugin-react": "^3.4.2",
+    "file-loader": "^0.8.4",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.1",
     "radium": "^0.14.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.11.0"
   },
