--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
+    "autoprefixer": "^6.0.3",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
@@ -36,10 +36,13 @@
     "css-loader": "^0.19.0",
     "eslint-plugin-react": "^3.4.2",
     "file-loader": "^0.8.4",
+    "font-awesome": "^4.4.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.1",
+    "postcss-loader": "^0.6.0",
     "radium": "^0.14.1",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^0.13.3",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
