--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "postcss-loader": "^0.6.0",
     "radium": "^0.14.1",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-rc1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
