--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "https://github.com/twbs/bootstrap/archive/v4.0.0-alpha.tar.gz",
     "css-loader": "^0.19.0",
     "eslint-plugin-react": "^3.4.2",
     "file-loader": "^0.8.4",
     "font-awesome": "^4.4.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.1",
+    "node-sass": "^3.3.3",
     "postcss-loader": "^0.6.0",
     "radium": "^0.14.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0-rc1",
+    "sass-loader": "^2.0.1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
